--- a/src/client/src/App.module.scss
+++ b/src/client/src/App.module.scss
@@ -1,5 +1,22 @@
+@import './textStyles';
 
 .container {
-  width: inherit;
-  background-color: #9eae86;
+  width: 80%;
+  margin: auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  box-sizing: border-box;
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background-color: white;
 }
