--- a/src/client/src/component/newGame/newGame.module.scss
+++ b/src/client/src/component/newGame/newGame.module.scss
@@ -1,14 +1,14 @@
 
 .container {
-
+display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-
 .link {
-  color: black;
   text-decoration: none;
+  color: black;
   font-size: 20px;
   font-family: TetrisManiaType;
-
   &:hover {
     animation-duration: 2s;
     animation-iteration-count: infinite;
@@ -29,6 +29,15 @@
     transform: translateY(0px);
     color: black;
   }
+}
+.copy{
+  margin: 10px;
+  width: 25px;
+  cursor: pointer;
+}
+.input{
+  font-family: TetrisManiaType;
+  width: 600px;
 }
 
 
