--- a/src/client/src/component/newGame/newGame.module.scss
+++ b/src/client/src/component/newGame/newGame.module.scss
@@ -18,26 +18,23 @@ display: flex;
 
 @keyframes bounce {
   0% {
-    transform: translateY(0);
     color: black;
   }
   25% {
-    transform: translateY(-10px);
     color: #007975;
   }
   100% {
-    transform: translateY(0px);
     color: black;
   }
 }
 .copy{
-  margin: 10px;
+  margin-left: 10px;
   width: 25px;
   cursor: pointer;
 }
 .input{
   font-family: TetrisManiaType;
-  width: 600px;
+ display: inline;
 }
 
 
