--- a/src/client/src/component/newGame/newGame.module.scss
+++ b/src/client/src/component/newGame/newGame.module.scss
@@ -1,14 +1,14 @@
 
 .container {
-
+display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-
 .link {
-  color: black;
   text-decoration: none;
+  color: black;
   font-size: 20px;
   font-family: TetrisManiaType;
-
   &:hover {
     animation-duration: 2s;
     animation-iteration-count: infinite;
@@ -18,17 +18,23 @@
 
 @keyframes bounce {
   0% {
-    transform: translateY(0);
     color: black;
   }
   25% {
-    transform: translateY(-10px);
     color: #007975;
   }
   100% {
-    transform: translateY(0px);
     color: black;
   }
+}
+.copy{
+  margin-left: 10px;
+  width: 25px;
+  cursor: pointer;
+}
+.input{
+  font-family: TetrisManiaType;
+ display: inline;
 }
 
 
